# algo

./: .gitignore  README.md
cpp/linearList/: CMakeLists.txt  arrayList.cpp  arrayList.h  linearList.cpp  linearList.h  main.cpp
cpp_algo/linearList/: main.cpp
cpp_algo/quick_sort/: CMakeLists.txt  main.cpp
cpp_knonwledge/variable/: CMakeLists.txt  main.cpp  variable.cpp  variable.h
